--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroui/react": "^2.6.14",
+    "@heroui/use-theme": "^2.1.2",
+    "framer-motion": "^12.0.5",
+    "heroui-cli": "^1.0.0",
+    "lucide-react": "^0.474.0",
+    "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
